--- a/intercorp-web-app/src/app/home/form/form.component.html
+++ b/intercorp-web-app/src/app/home/form/form.component.html
@@ -5,7 +5,7 @@
           <label for="inputName" class="ancho-label col-form-label">Nombre: </label>
         </div>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="inputName" #name required>
+            <input type="text" class="form-control" id="inputName" name="namez" [(ngModel)]="name" required>
           </div>
         </div>
 
@@ -14,7 +14,7 @@
                 <label for="inputLastName" class="ancho-label col-form-label">Apellido:</label>
               </div>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="inputLastName"  #lastName required>
+              <input type="text" class="form-control" id="inputLastName"  name="lastName" [(ngModel)]="lastName" required>
             </div>
           </div>
 
@@ -23,7 +23,7 @@
                 <label for="inputAge" class="ancho-label col-form-label">Edad:</label>
               </div>
             <div class="col-sm-9">
-              <input type="number" class="form-control" id="inputAge"  #age required>
+              <input type="number" class="form-control" id="inputAge" name="age" [(ngModel)]="age" required>
             </div>
           </div>
 
@@ -32,12 +32,15 @@
                 <label for="birthDate" class="ancho-label col-form-label">Fecha de Nacimiento:</label>
               </div>
             <div class="col-sm-9">
-              <input type="date" class="form-control" id="birthDate"  #birthDate required>
+              <input type="date" class="form-control" id="birthDate"  name="birthDate" [(ngModel)]="birthDate" required>
             </div>
           </div>
           
         <div class="d-flex justify-content-center margin-top-low">
-          <button class="width  btn  btn-lg btn-danger justify-content-center" >Enviar</button>
+          <button class="width  btn  btn-lg btn-danger justify-content-center" (click)="sendData()" >Enviar</button>
         </div>
       </div>
   </div>
+
+
+  <span>{{name}} {{lastName}} {{birhDate}} {{age}}</span>
