--- a/intercorp-web-app/src/app/nav-bar/nav-bar.component.html
+++ b/intercorp-web-app/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,12 @@
-
-<div class="d-flex flex-column w-25 h-100">
-<button routerLink="/form">Formulario</button>
-<button routerLink="/list">Lista de Clientes</button>
-<button routerLink="/analytics">Analiticas de Clientes</button>
-</div>
+<section class="nav-pa bg-danger d-flex flex-column">
+  <div class="d-flex align-items-center">
+    <a name="form" routerLink="/form">Formulario</a>
+  </div>
+  <div>
+    <a name="list" routerLink="/list">Lista de Clientes</a>
+  </div>
+  <div>
+    <a name="analytics" routerLink="/analytics">Analiticas de Clientes
+    </a>
+  </div>
+</section>
