Agregando la fecha probable de muerte

--- a/intercorp-web-app/src/app/home/analytics/analytics.component.html
+++ b/intercorp-web-app/src/app/home/analytics/analytics.component.html
@@ -1,1 +1,28 @@
-<p>analytics works!</p>
+<div class="d-flex justify-content-center">
+<table class="table table-striped w-75">
+    <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Apellido</th>
+      <th scope="col">Edad</th>
+      <th scope="col">Fecha de Nacimiento</th>
+      <th scope="col">Fecha probable de muerte (80 años)</th>
+
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let client of clients; index as i">
+      <th scope="row">{{ i + 1 }}</th>
+      <td>
+        {{ client.data.name }}
+      </td>
+      <td>{{ client.data.lastName}}</td>
+      <td>{{ client.data.age}}</td>
+      <td>{{ client.data.birthDate}}</td>
+      <td>{{ client.data.deadDate}}</td>
+
+    </tr>
+    </tbody>
+  </table>
+</div>
