--- a/intercorp-web-app/src/app/home/form/form.component.html
+++ b/intercorp-web-app/src/app/home/form/form.component.html
@@ -1,5 +1,5 @@
 
-<div class="d-flex flex-column align-items-center">
+<div class="d-flex flex-column align-items-center justify-content-around">
   <div class="d-flex flex-row">
     <div class="d-flex flex-column justify-content-around interspace">
       <label for="inputName" class="col-form-label">Nombre: </label>
