--- a/intercorp-web-app/src/app/nav-bar/nav-bar.component.html
+++ b/intercorp-web-app/src/app/nav-bar/nav-bar.component.html
@@ -1,12 +1,13 @@
-<section class="nav-pa bg-danger d-flex flex-column">
+<section class="nav-pa int-blue d-flex flex-row justify-content-around align-items-center">
+  <div class="white title">Intercorp Reto</div>
   <div class="d-flex align-items-center">
-    <a name="form" routerLink="/form">Formulario</a>
+    <a class="white nav-word" name="form" routerLink="/">Formulario</a>
   </div>
   <div>
-    <a name="list" routerLink="/list">Lista de Clientes</a>
+    <a class="white nav-word" name="list" routerLink="/list">Lista de Clientes</a>
   </div>
   <div>
-    <a name="analytics" routerLink="/analytics">Analiticas de Clientes
+    <a class="white nav-word" name="analytics" routerLink="/analytics">Proyección y Análisis de Clientes
     </a>
   </div>
 </section>
