--- a/intercorp-web-app/src/app/nav-bar/nav-bar.component.css
+++ b/intercorp-web-app/src/app/nav-bar/nav-bar.component.css
@@ -2,3 +2,23 @@
 .nav-pa {
     padding: 30px;
 }
+
+.int-blue{
+    background-color: #173F73
+}
+.int-selected{
+    background-color: #103173
+}
+.white{
+    color:#D3DDF0;
+}
+
+.title{
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.nav-word{
+    font-size: 17px;
+    text-decoration: none;
+}
